--- a/theme/init.scss
+++ b/theme/init.scss
@@ -1,16 +1,21 @@
 @import 'fontawesome';
 @import '~material-design-icons/iconfont/material-icons.css';
 
+@import "node_modules/bootstrap/scss/bootstrap";
+
+// TODO: add proper fix for angular12 instead of commenting stuff out
+
 // Modified from bootstrap 4.1.3 (bootstrap.scss) overriding mixins with our own
 
+/*
 @import "./variables";
 
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "mixins";  // override with our own
 @import "~bootstrap/scss/root";
-@import "~bootstrap/scss/reboot";
-@import "~bootstrap/scss/type";
+// @import "~bootstrap/scss/reboot";
+// @import "~bootstrap/scss/type";
 @import "~bootstrap/scss/images";
 @import "~bootstrap/scss/code";
 @import "~bootstrap/scss/grid";
@@ -40,6 +45,7 @@
 @import "~bootstrap/scss/carousel";
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/print";
+*/
 
 @import "./main";
 @import "./frontpage";
